<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cmu_16833_project</name>
  <version>1.0.0</version>
  <description>cmu 16833 project</description>

  <maintainer email="haorux@andrew.cmu.edu">Haoru Xue</maintainer>

  <license>TODO</license>

  <author>Haoru Xue</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>lio_sam</exec_depend>
  <exec_depend>pointcloud_preprocessor</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
